imagedir = $(pkgdatadir)

image_DATA = \
	hibernate.png \
	hibernate_prelight.png \
	logout.png \
	logout_prelight.png \
	reboot.png \
	reboot_prelight.png \
	shutdown.png \
	shutdown_prelight.png \
	suspend.png \
	suspend_prelight.png \
	switcher_corner.png \
	switcher_left.png \
	switcher_top.png \
	user.png \
	user_prelight.png

EXTRA_DIST = $(image_DATA)

-include $(top_srcdir)/git.mk
